# smartflow-ai-traffic-system

./: .gitignore  README.md  start.bat  start.sh
backend/: .env.example  api.py  pyproject.toml  requirements.txt  user_preference.txt
backend/src/smartflow_traffic_management_system/: crew.py  main.py
backend/src/smartflow_traffic_management_system/config/: agents.yaml  tasks.yaml
frontend/: .env.local.example  package.json  tailwind.config.ts
frontend/src/ai/: dev.ts  genkit.ts
frontend/src/ai/flows/: emergency-corridor-flow.ts  predictive-congestion-flow.ts  traffic-optimization-flow.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/SmartFlow/: AdminDashboard.tsx  EmergencyControl.tsx  FeedbackDialog.tsx  LiveSignalBoard.tsx  LoginPage.tsx  NavSidebar.tsx  PredictionsPanel.tsx  RealTimeMap.tsx  SignalStatus.tsx  SmartFlowApp.tsx  SmartFlowDashboard.tsx  StatsDashboard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: use-backend-api.ts
