[project]
name = "smartflow-backend"
version = "1.0.0"
description = "SmartFlow — FastAPI + CrewAI backend for AI traffic management"
authors = [{ name = "SmartFlow Team", email = "team@smartflow.ai" }]
requires-python = ">=3.10,<3.14"

dependencies = [
    # CrewAI core
    "crewai[litellm,tools]==1.10.1",
    # FastAPI + ASGI server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Utils
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
start-api    = "api:app"
run-crew     = "smartflow_traffic_management_system.main:run"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
